# race_track

./: CMakeLists.txt  README.md  package.xml  path.material
launch/: camera.launch  follower.launch  jackal_world.launch  my_description.launch
race_track/: CMakeLists.txt~  model.config~  model.sdf~  package.xml  package.xml~  path.material  path.material~
race_track/launch/: jackal_world.launch  jackal_world.launch~
race_track/scripts/: flea3_vis.py~  line_follow.py  line_follow.py~  pid_laserline.py~  ram.py  vision.py~  vision2.py~  working_laser_line.py~
race_track/urdf/: accessories.urdf.xacro
race_track/worlds/: jackal_path.world  path.world~  test.world~
scripts/: backup.py  line_follow.py  race_track.py
urdf/: accessories.urdf.xacro~  jackal.urdf.xacro
worlds/: jackal_path.world  robot_view.rviz
