<?xml version="1.0"?>
<package>
  <name>race_track</name>
  <version>0.3.0</version>
  <description>Line following robot with obstacle avoidance ability.</description>

  <maintainer email="hli8@mtu.edu">Richard Li</maintainer>
  <author>Team Project</author>

  <license>BSD</license>

  <url type="website"> </url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend version_gte="0.5">jackal_control</run_depend>
  <run_depend version_gte="0.5">jackal_description</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="/home/richard/catkin_ws/src/race_track/race_track/"/>
  </export>
</package>
